@@ -25,39 +25,48 @@ class PlatformTest(unittest.TestCase):
             finally:
                 os.remove(link)
 
-    def test_machine(self):
-        res = platform.machine()
-
-    def test_node(self):
-        res = platform.node()
-
     def test_platform(self):
         for aliased in (False, True):
             for terse in (False, True):
                 res = platform.platform(aliased, terse)
 
+    def test_system(self):
+        res = platform.system()
+
+    def test_node(self):
+        res = platform.node()
+
+    def test_release(self):
+        res = platform.release()
+
+    def test_version(self):
+        res = platform.version()
+
+    def test_machine(self):
+        res = platform.machine()
+
     def test_processor(self):
         res = platform.processor()
+
+    def test_python_implementation(self):
+        res = platform.python_implementation()
+
+    def test_python_version(self):
+        res1 = platform.python_version()
+        res2 = platform.python_version_tuple()
+        self.assertEqual(res1, ".".join(res2))
+
+    def test_python_branch(self):
+        res = platform.python_branch()
+
+    def test_python_revision(self):
+        res = platform.python_revision()
 
     def test_python_build(self):
         res = platform.python_build()
 
     def test_python_compiler(self):
         res = platform.python_compiler()
-
-    def test_version(self):
-        res1 = platform.version()
-        res2 = platform.version_tuple()
-        self.assertEqual(res1, ".".join(res2))
-
-    def test_release(self):
-        res = platform.release()
-
-    def test_system(self):
-        res = platform.system()
-
-    def test_version(self):
-        res = platform.version()
 
     def test_system_alias(self):
         res = platform.system_alias(
